# SingleStopCoffeaTests

./: pyproject.toml  test.py
samples/: Diboson2018.txt  QCD.txt  QCDBEnriched.txt  QCDBEnriched2018.txt  RPV.txt  STHadronic2018.txt  TTToHadronic.txt  WJetsToQQ2018.txt  ZJetsToNuNu2018.txt  ZJetsToQQ2018.txt  findFiles.py
